Fix spacing in mobile mode

--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ section img {
     }
 
     nav ul li a {
-      padding-left: 25px;
+      padding: 0;
               text-shadow: 2px 2px 5px black;
               color: white;
               font-size: 1.5em;
